# data_cruncher

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/data_cruncher/: __init__.py  base.py  date_model.py  queries.py
